# Mechanical_Arm_Contorl

./: .gitignore  CMakeLists.txt  Mechanical_Arm_Contorl.ioc  README.md
Core/Inc/: main.h
Core/Src/: main.c  system_stm32f1xx.c
Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
MDK-ARM/: Mechanical_Arm_Contorl.uvguix.25396  Mechanical_Arm_Contorl.uvoptx  Mechanical_Arm_Contorl.uvprojx
MDK-ARM/RTE/_Mechanical_Arm_Contorl/: RTE_Components.h
